- include Apex in sym header menu. - update apex page selection and page loading functions to enable loading pages via links. - create variables for apex page/data version information to display on apex index page. - modify  sym-pageSelection style on apex pages to prevent from row of page selectors from splitting into rows unevenly. - add missing recoilValue css style to apex chart css. - add function to load apex chart style sheet via js when opening the apex chart pages. - remove forced use of weapon burst ROF when burst ROF != normal ROF.

--- a/webpage/pages/apex/apex_chart.css
+++ b/webpage/pages/apex/apex_chart.css
@@ -686,6 +686,15 @@ img.fnone{width: 59px; height: 59px;float:none !important}
     font-size: 24px;
 }
 
+.magGraphicBox {
+    margin-top: 5px;
+}
+
+.recoilValue {
+    font-size: 15px;
+    fill: white;
+}
+
 .apex_wpnSwitchImg{
     height: 20px;
     width: auto;
