--- a/webpage/sym.css
+++ b/webpage/sym.css
@@ -178,7 +178,7 @@ a.sym-main-desc-learnMore-btn {
 .sym-pageSelections {
     text-align: center;
     font-weight: bold;
-    width: 1312px;
+    width: 1160px;
     margin: auto;
 }
 
